docs: use 'Math.clamp(v, min, max)' instead of 'Math.min(Math.max(v, min), max)'