@@ -240,7 +240,8 @@ class DateEditor extends AbstractCellEditor implements TableCellEditor, ActionLi
       if ((height != prevHeight || rowCount != prevCount) && rowHeight > 0) {
         int remainder = height % rowCount;
         for (int i = 0; i < rowCount; i++) {
-          int a = rowHeight + Math.min(1, Math.max(0, remainder));
+          int a = rowHeight + Math.min(Math.max(remainder, 0), 1);
+          // Java 21: int a = rowHeight + Math.clamp(remainder, 0, 1);
           setRowHeight(i, Math.max(1, a));
           remainder -= 1;
         }
