@@ -152,7 +152,8 @@ class MonthTable extends JTable {
     int rowHeight = height / rowCount;
     int remainder = height % rowCount;
     for (int i = 0; i < rowCount; i++) {
-      int a = rowHeight + Math.min(1, Math.max(0, remainder));
+      int a = rowHeight + Math.min(Math.max(remainder, 0), 1);
+      // Java 21: int a = rowHeight + Math.clamp(remainder, 0, 1);
       setRowHeight(i, Math.max(1, a));
       remainder -= 1;
     }
